--- a/assets/bibliography/2025-05-30-efficient-neural-receivers.bib
+++ b/assets/bibliography/2025-05-30-efficient-neural-receivers.bib
@@ -49,3 +49,45 @@
       primaryClass={cs.LG},
       url={https://arxiv.org/abs/2104.08378}, 
 }
+
+@misc{nrx_arxiv,
+Author = {Reinhard Wiesmayr and Sebastian Cammerer and Fayçal Aït Aoudia and Jakob Hoydis and Jakub Zakrzewski and Alexander Keller},
+Title = {Design of a Standard-Compliant Real-Time Neural Receiver for 5G NR},
+Year = {2024},
+Eprint = {arXiv:2409.02912}
+}
+
+@misc{nvidia-diffusion,
+  title = {NVIDIA Developer},
+  author = {Zhiyu Cheng, Erin Ho and Justin Xin},
+  year = {2025},
+  url = {https://developer.nvidia.com/blog/tensorrt-accelerates-stable-diffusion-nearly-2x-faster-with-8-bit-post-training-quantization},
+  note = {Accessed on May 30, 2025}
+}
+
+@misc{OAI,
+  title = {OpenAirInterface},
+  author = {Eurecom},
+  year = {2025},
+  url = {https://gitlab.eurecom.fr/oai/openairinterface5g},
+  note = {Accessed on May 30, 2025}
+}
+
+@inproceedings{nrx_globcom,
+  author={Cammerer, Sebastian and Aoudia, Fayçal Aït and Hoydis, Jakob and Oeldemann, Andreas and Roessler, Andreas and Mayer, Timo and Keller, Alexander},
+  booktitle={2023 IEEE Globecom Workshops (GC Wkshps)}, 
+  title={A Neural Receiver for 5G NR Multi-User MIMO}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={329-334},
+  keywords={Training;Time-frequency analysis;OFDM;Channel estimation;Receivers;Computer architecture;Artificial neural networks},
+  doi={10.1109/GCWkshps58843.2023.10464486}
+}
+
+@article{distill,
+  title={Distilling the knowledge in a neural network},
+  author={Hinton, Geoffrey and Vinyals, Oriol and Dean, Jeff},
+  journal={arXiv preprint arXiv:1503.02531},
+  year={2015}
+}
